--- a/src/css/generic/ui/SplitView.less
+++ b/src/css/generic/ui/SplitView.less
@@ -4,112 +4,81 @@
   position: relative;
 }
 
-.vs_ui_splitview > div {
+.vs_ui_splitview > * {
   position: absolute;
   overflow: hidden;
 }
 
 /***       TABLET mode      */
 
-.vs_ui_splitview.tablet.horizontal.left > div:nth-child(1),
-.vs_ui_splitview.tablet.horizontal.right > div:nth-child(1)
+.vs_ui_splitview.tablet.horizontal > *:nth-child(1)
 {
-  width: 30%;
+  width: 25%;
   height: 100%;
 }
 
-.vs_ui_splitview.tablet.horizontal.left > div:nth-child(2),
-.vs_ui_splitview.tablet.horizontal.right > div:nth-child(2)
+.vs_ui_splitview.tablet.horizontal > *:nth-child(2)
 {
-  width: 70%;
+  width: 75%;
   height: 100%;
 }
 
-.vs_ui_splitview.tablet.horizontal.left > div:nth-child(1)
+.vs_ui_splitview.tablet.horizontal > *:nth-child(1)
 {
   left: 0px;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.vs_ui_splitview.tablet.horizontal.left > div:nth-child(2)
+.vs_ui_splitview.tablet.horizontal > *:nth-child(2)
 {
-  left: 30%;
+  left: 25%;
 }
 
-.vs_ui_splitview.tablet.horizontal.right > div:nth-child(1)
-{
-  left: 70%;
-  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.5);
+.vs_ui_splitview.tablet.vertical > *:nth-child(1) {
+  display:none;
 }
 
-.vs_ui_splitview.tablet.horizontal.right > div:nth-child(2)
-{
-  left: 0px;
-}
-
-.vs_ui_splitview.tablet.horizontal.top > div:nth-child(1),
-.vs_ui_splitview.tablet.horizontal.bottom > div:nth-child(1)
+.vs_ui_splitview.tablet.vertical > *:nth-child(1)
 {
   width: 100%;
-  height: 30%;
+  height: 25%;
 }
 
-.vs_ui_splitview.tablet.horizontal.top > div:nth-child(2),
-.vs_ui_splitview.tablet.horizontal.bottom > div:nth-child(2)
+.vs_ui_splitview.tablet.vertical > *:nth-child(2)
 {
   width: 100%;
-  height: 70%;
+  height: 75%;
 }
 
-.vs_ui_splitview.tablet.horizontal.top > div:nth-child(1)
+.vs_ui_splitview.tablet.vertical > *:nth-child(1)
 {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   top: 0px;
 }
 
-.vs_ui_splitview.tablet.horizontal.top > div:nth-child(2)
+.vs_ui_splitview.tablet.vertical > *:nth-child(2)
 {
   bottom: 0px;
-}
-
-.vs_ui_splitview.tablet.horizontal.bottom > div:nth-child(1)
-{
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
-  bottom: 0px;
-}
-
-.vs_ui_splitview.tablet.horizontal.bottom > div:nth-child(2)
-{
-  top: 0px;
-}
-
-.vs_ui_splitview.tablet.vertical > div:nth-child(1) {
-  display:none;
-}
-
-.vs_ui_splitview.tablet.vertical > div:nth-child(2) {
-  width: 100%;
-  height: 100%;
 }
 
 /***       MOBILE mode      */
 
-.vs_ui_splitview.mobile > div {
+.vs_ui_splitview.mobile > * {
   .translate (0px ,0px);
   .transition(~"transform ease 300ms");
 }
 
-.vs_ui_splitview.mobile.main_view_visible > div {
+.vs_ui_splitview.mobile.main_view_visible > * {
   .translate(-100% ,0px);
 }
 
-.vs_ui_splitview.mobile > div:nth-child(1) {
+.vs_ui_splitview.mobile > *:nth-child(1) {
   left: 0px;
   width: 100%;
   height: 100%;
 }
 
-.vs_ui_splitview.mobile > div:nth-child(2) {
+.vs_ui_splitview.mobile > *:nth-child(2) {
   left: 100%;
   width: 100%;
   height: 100%;
