--- a/src/css/flat/CheckBox.less
+++ b/src/css/flat/CheckBox.less
@@ -13,7 +13,7 @@
   border: none;
 }
 
-input[type="checkbox"]:active + label,
+.vs_ui_checkbox input[type="checkbox"]:active + label,
 .vs_ui_checkbox label:active
 {
   .base_background_selected;
@@ -33,13 +33,13 @@ input[type="checkbox"]:active + label,
   content: "\f096";
 }
 
-input[type="checkbox"]:checked + label::after
+.vs_ui_checkbox nput[type="checkbox"]:checked + label::after
 {
   content: "\f046";
   color: @blue;
 }
 
-input[type="checkbox"]:active + label::after,
+.vs_ui_checkbox input[type="checkbox"]:active + label::after,
 .vs_ui_checkbox label:active::after
 {
   color: @blue;
