Update example with the new API

--- a/examples/SplitView/partials/buttonsPanels.html
+++ b/examples/SplitView/partials/buttonsPanels.html
@@ -1,17 +1,17 @@
 <vs-button>Coco</vs-button>
-<vs-button style="white">Default White</vs-button>
-<vs-button style="grey">Default Grey</vs-button>
-<vs-button style="green">Default Green</vs-button>
-<vs-button style="red">Default Red</vs-button>
-<vs-button type="nav">Nav</vs-button>
-<vs-button type="nav" style="black">Nav</vs-button>
-<vs-button type="nav" style="red">Nav</vs-button>
-<vs-button type="nav" style="green">Nav</vs-button>
-<vs-button type="nav_back">Nav Back</vs-button>
-<vs-button type="nav_back" style="black">Nav Back</vs-button>
-<vs-button type="nav_back" style="red">Nav Back</vs-button>
-<vs-button type="nav_back" style="green">Nav Back</vs-button>
-<vs-button type="nav_forward">Nav Forward</vs-button>
+<vs-button class="white">Default White</vs-button>
+<vs-button class="grey">Default Grey</vs-button>
+<vs-button class="green">Default Green</vs-button>
+<vs-button class="red">Default Red</vs-button>
+<vs-button class="nav">Nav</vs-button>
+<vs-button class="nav black">Nav</vs-button>
+<vs-button class="nav red">Nav</vs-button>
+<vs-button class="nav green">Nav</vs-button>
+<vs-button class="nav_back">Nav Back</vs-button>
+<vs-button class="nav_back black">Nav Back</vs-button>
+<vs-button class="nav_back red">Nav Back</vs-button>
+<vs-button class="nav_back green">Nav Back</vs-button>
+<vs-button class="nav_forward">Nav Forward</vs-button>
 
 <vs-segmented-button ng-model="modelSB">
   <div>Item 1</div>
@@ -19,7 +19,7 @@
   <div>Item 3</div>
 </vs-segmented-button>
 <span>{{modelSB}}</span>
-<vs-segmented-button type="bar">
+<vs-segmented-button class="bar">
   <div>Item 1</div>
   <div>Item 2</div>
   <div>Item 3</div>
