--- a/src/css/generic/ui/List.less
+++ b/src/css/generic/ui/List.less
@@ -6,6 +6,12 @@
   height: 100%;
 }
 
+.vs_ui_list > fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 ul {
   padding: 0px;
   margin: 0px;
@@ -22,7 +28,7 @@ li {
   list-style-type: none;
 }
 
-.vs_ui_list.arrow > ul > li:after {
+.vs_ui_list.arrow > fieldset > ul > li:after {
   .box-sizing(border-box);
   position: absolute;
   right: 10px;
@@ -30,12 +36,12 @@ li {
   .translateY(-40%);
 }
 
-.vs_ui_list > ul > li {
+.vs_ui_list > fieldset > ul > li {
   min-height: 38px;
 }
 
-.vs_ui_list > div,
-.vs_ui_list > ul > div {
+.vs_ui_list > fieldset > div,
+.vs_ui_list > fieldset > ul > div {
   overflow:hidden;
   white-space:nowrap;
   text-overflow:ellipsis;
@@ -60,7 +66,7 @@ li {
   padding: 0px;
 }
 
-.vs_ui_list.tab_list > .direct_access {
+.vs_ui_list.tab_list .direct_access {
   z-index: 10;
   width: 15px;
   height : auto;
@@ -78,19 +84,19 @@ li {
   transform: translate3d(0, -50%, 0);
 }
 
-.vs_ui_list.tab_list > .direct_access > div {
+.vs_ui_list.tab_list .direct_access > div {
   font-weight: bold;
   font-size: .7em;
   text-align: center;
   text-transform:capitalize;
 }
 
-.vs_ui_list.tab_list > .direct_access:active {
+.vs_ui_list.tab_list .direct_access:active {
   background-color: rgba(125,125,125,0.5);
   color: white;
 }
 
-.vs_ui_list.tab_list > .direct_access_value {
+.vs_ui_list.tab_list .direct_access_value {
   opacity: 0;
   position: absolute;
   top: 50%; left: 50%;
