--- a/src/css/generic/ui/ToolBar.less
+++ b/src/css/generic/ui/ToolBar.less
@@ -18,21 +18,18 @@
 
 .vs_ui_toolbar {
   width: 100%;
-  bottom:0px;
+  top: auto;
+  left: 0;
+  bottom:0;
   z-index: 2000;
   
   overflow: hidden;
-  position: fixed;
-}
-
-.vs_ui_toolbar > div
-{
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  .box-align(stretch);
   .box-orient(horizontal);
 }
 
-.vs_ui_toolbar > div > div
+.vs_ui_toolbar > *
 {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -44,6 +41,10 @@
   .box-flex(1);
 }
 
+.vs_ui_toolbar label > * {
+  height: 100%;
+}
+
 .vs_ui_toolbar.black_style {
 }
 
@@ -51,4 +52,20 @@
 }
 
 .vs_ui_toolbar.blue_style {
+}
+
+.vs_ui_toolbar input {
+  .appearance(none);
+  font-size: inherit;
+
+  margin: 0px;
+  outline: none;
+  border: none;
+
+  background: transparent;
+  display: none;
+}
+
+.vs_ui_toolbar input:checked {
+  outline: none;
 }
