--- a/src/css/flat/ToolBar.less
+++ b/src/css/flat/ToolBar.less
@@ -54,6 +54,7 @@
 
 .vs_ui_toolbar input:checked + label > * {
   .base_background_selected;
+  color: #202020;
 }
 
 .vs_ui_toolbar label:hover > *,
