--- a/src/css/generic/ui/View.less
+++ b/src/css/generic/ui/View.less
@@ -26,7 +26,10 @@
   
   .transform-origin(0 0);
 }
-::selection { background: transparent; }
+
+::selection {
+  background: transparent;
+}
 
 .vs_ui_view
 {
@@ -38,4 +41,10 @@
 
 .disabled {
   opacity: 0.5;
+}
+
+textarea::selection,
+input[type=text]::selection,
+input[type=password]::selection {
+  background: rgba(0, 100, 200, 0.5);
 }
